# Spicy-Boi

./: .env.sample  .gitignore  CMakeLists.txt  Makefile  README.md  lcd.py  requirements.txt  server.py  spice_it_up.py
hermes/: CMakeLists.txt  README.md  hlog.h  scanner.c
hermes/include/: hlog.h  scanner.h
hermes/src/: main.c  scanner.c
